# kung-fu-chess2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  black.py  build.bat  test_auth.py  test_jump.txt  white.py
.cursor/plans/: auth_rating_server_7b28f7ef.plan.md  websocket_client_architecture_99d6ad55.plan.md  websocketserver_split_e3af2804.plan.md
.cursor/rules/: agents.mdc  architecture.mdc  cpp-files.mdc  engine-realtime.mdc  english-thinking.mdc  io-input-view.mdc  model-rules.mdc  project-core.mdc
.github/: copilot-instructions.md
assets/sounds/: README.txt
include/: Board.h  Game.h  GraphicsApplication.h  MoveRules.h
include/auth/: AuthController.h  AuthResult.h  Elo.h  PasswordHasher.h  UserRepository.h  UserService.h
include/bus/: EventBus.h  GameEvent.h  IGameEventListener.h  MoveLogSubscriber.h  RatingSubscriber.h  SoundSubscriber.h
include/client/: IMatchmaker.h  InboundMessageQueue.h  RemoteStateSource.h  SessionBootstrap.h  WebSocketClient.h
include/engine/: GameEngine.h
include/graphics/: IBoardInput.h  IFrameSideEffects.h  IFrameStateSource.h  LocalEngineStateSource.h
include/input/: BoardMapper.h  Controller.h
include/io/: BoardParser.h  BoardPrinter.h
include/model/: Board.h  Cell.h  GameState.h  Piece.h  Position.h
include/protocol/: Algebraic.h  CommandParser.h  StateDeserializer.h  StateSerializer.h
include/realtime/: Motion.h  RealTimeArbiter.h  Rest.h  RestView.h
include/rules/: PieceRules.h  RuleEngine.h
include/server/: ConnectionRegistry.h  GameSession.h  MatchCoordinator.h  RoomManager.h  WebSocketServer.h
include/texttests/: ScriptParser.h  ScriptRunner.h
include/view/: ImageView.h  Img.h  Renderer.h
src/: Board.cpp  Game.cpp  GraphicsApplication.cpp  MoveRules.cpp  graphics_main.cpp  main.cpp  server_main.cpp
src/auth/: AuthController.cpp  Elo.cpp  PasswordHasher.cpp  UserRepository.cpp  UserService.cpp
src/bus/: EventBus.cpp  GameEvent.cpp  MoveLogSubscriber.cpp  RatingSubscriber.cpp  SoundSubscriber.cpp
src/client/: IMatchmaker.cpp  InboundMessageQueue.cpp  RemoteStateSource.cpp  SessionBootstrap.cpp  WebSocketClient.cpp
src/engine/: GameEngine.cpp
src/graphics/: IBoardInput.cpp  IFrameSideEffects.cpp  LocalEngineStateSource.cpp
src/input/: BoardMapper.cpp  Controller.cpp
src/io/: BoardParser.cpp  BoardPrinter.cpp
src/model/: Board.cpp  Cell.cpp  GameState.cpp  Piece.cpp  Position.cpp
src/protocol/: Algebraic.cpp  CommandParser.cpp  StateDeserializer.cpp  StateSerializer.cpp
src/realtime/: Motion.cpp  RealTimeArbiter.cpp
src/rules/: PieceRules.cpp  RuleEngine.cpp
src/server/: ConnectionRegistry.cpp  GameSession.cpp  MatchCoordinator.cpp  RoomManager.cpp  WebSocketServer.cpp
src/texttests/: ScriptParser.cpp  ScriptRunner.cpp
src/view/: ImageView.cpp  Img.cpp  Renderer.cpp
tests/: BoardIOTest.cpp  BoardMapperTest.cpp  BoardTest.cpp  ConnectionRegistryTest.cpp  ControllerTest.cpp  GameEngineTest.cpp  GameTest.cpp  MatchCoordinatorTest.cpp  MoveRulesBishopTest.cpp  MoveRulesGeneralTest.cpp  MoveRulesKingTest.cpp  MoveRulesKnightTest.cpp  MoveRulesPawnTest.cpp  MoveRulesQueenTest.cpp  MoveRulesRookTest.cpp  MoveRulesTest.cpp  RealTimeArbiterTest.cpp  RuleEngineTest.cpp  TestFramework.h  TestHelpers.cpp  TestHelpers.h  test_main.cpp
